--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: Suporte
 theme:
   name: material
+  custom_dir: docs/assets/images/
   logo: assets/images/logo.svg
   icon: assets/images/logo.svg
   features:
@@ -8,12 +9,14 @@ theme:
     - navigation.sections
     - toc.integrate
     - navigation.top
+    - navigation.footer
     - search.suggest
     - search.highlight
+    - search.share
     - content.tabs.link
     - content.code.annotation
     - content.code.copy
-  language: pt
+  language: pt-BR
   palette:
     - scheme: default
       toggle:
@@ -29,19 +32,14 @@ theme:
       accent: indigo
 
 plugins:
+  - glightbox
   - offline
+  - drawio_file
   - social:
       enabled: !ENV [CI, false]
-  - privacy:
-      enabled: !ENV [CI, false]
-      cache: false
   - search:
       lang: pt
   - tags
-  - group:
-      plugins:
-        - optimize
-        - minify
 
 extra:
   social:
@@ -49,10 +47,33 @@ extra:
       link: https://www.instagram.com/wesleyhenriques.oficial
     - icon: fontawesome/brands/youtube
       link: https://www.youtube.com/@WesleyHenriques.Oficial
+    - icon: fontawesome/brands/whatsapp
+      link: https://wa.me/5547920017909
+  status:
+    <identifier>: <description>
+
+extra_javascript:
+  - javascripts/extra.js
+  - javascripts/glightbox.min.js
+
+extra_css:
+  - stylesheets/extra.css
+  - stylesheets/glightbox.min.css
 
 markdown_extensions:
+  - tables
   - toc:
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
+      permalink: true
       title: Nesta página
+  - pymdownx.tabbed:
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
+  - pymdownx.tasklist:
+      custom_checkbox: true
   - abbr
   - admonition
   - def_list
@@ -70,10 +91,13 @@ markdown_extensions:
   - admonition
   - pymdownx.arithmatex:
       generic: true
+  - pymdownx.tabbed:
+      alternate_style: true
   - footnotes
   - pymdownx.details
   - pymdownx.superfences
   - pymdownx.mark
+  - pymdownx.smartsymbols
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
