$Adding initial documentation files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,8 @@ plugins:
   - glightbox
   - offline
   - drawio_file
-  - social
+  - social:
+      enabled: !ENV [CI, false]
   - search:
       lang: pt
   - tags
