--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Suporte
+site_url: https://wesleyhenriques33.github.io/suporte/
 repo_url: https://github.com/wesleyhenriques33/suporte
 repo_name: Wesley Henriques - Suporte
 theme:
