--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,7 +77,7 @@ markdown_extensions:
           case: lower
       permalink: true
       title: Nesta página
-      separator: "_"
+      separator: "-"
   - pymdownx.tabbed:
       slugify: !!python/object/apply:pymdownx.slugs.slugify
         kwds:
