$Update all contentes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
   logo: assets/images/logo.svg
   icon: assets/images/logo.svg
   features:
+    - announce.dismiss
     - navigation.tabs
     - navigation.sections
     - toc.integrate
@@ -15,6 +16,7 @@ theme:
     - search.suggest
     - search.highlight
     - search.share
+    - search.boost
     - content.tabs.link
     - content.code.annotation
     - content.code.copy
@@ -34,6 +36,8 @@ theme:
       accent: indigo
 
 plugins:
+  - privacy
+  - glightbox
   - search:
       lang: pt
       separator: '[\s\-,:!=\[\]()"/]+|(?!\b)(?=[A-Z][a-z])|\.(?!\d)|&[lg]t;'
@@ -58,6 +62,11 @@ extra:
       link: https://wa.me/5547920017909
   status:
     <identifier>: <description>
+  extra:
+  consent:
+    title: Consentimento de Cookies
+    description: >- 
+      Este site faz uso de coockies para melhor gerenciar sua performance e dados.
 
 extra_javascript:
   - javascripts/extra.js
@@ -68,7 +77,6 @@ extra_css:
   - stylesheets/glightbox.min.css
 
 markdown_extensions:
-  - footnotes
   - smarty
   - sane_lists
   - tables
