--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,8 @@ extra:
       link: https://www.youtube.com/@WesleyHenriques.Oficial
     - icon: fontawesome/brands/whatsapp
       link: https://wa.me/5547920017909
+    - icon: simple/linktree
+      link: https://linktr.ee/wesleyhenriques.oficial
   status:
     <identifier>: <description>
   extra:
