--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
           key: ${{ github.ref }}
           path: .cache
       - run: pip install mkdocs-material
+      - run: pip install "mkdocs-material[imaging]"
       - run: pip install mkdocs-glightbox
       - run: pip install pillow cairosvg
       - run: mkdocs gh-deploy --force
