$Exclude RK folders

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Suporte
 site_url: https://wesleyhenriques33.github.io/suporte/
-repo_url: https://github.com/wesleyhenriques33/suporte
+repo_url: https://suporte.wesleyhenriques.com
 repo_name: Wesley Henriques - Suporte
 theme:
   name: material
