--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Suporte
-site_url: https://wesleyhenriques33.github.io/suporte/
+site_url: https://suporte.wesleyhenriques.com/
 repo_url: https://wesleyhenriques33.github.io/suporte/
 repo_name: Wesley Henriques - Suporte
 theme:
