--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,11 +9,16 @@ theme:
   features:
     - announce.dismiss
     - navigation.instant
+    - navigation.instant.progress
+    - navigation.tracking
     - navigation.tabs
+    - navigation.tabs.sticky
     - navigation.sections
+    - navigation.expand
     - navigation.top
     - navigation.footer
     - toc.integrate
+    - toc.follow
     - search.suggest
     - search.highlight
     - search.share
