--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ repo_url: https://suporte.wesleyhenriques.com/
 repo_name: Wesley Henriques - Suporte
 theme:
   name: material
+  custom_dir: overrides
   logo: assets/images/logo.svg
   icon: assets/images/logo.svg
   features:
@@ -26,6 +27,8 @@ theme:
     - content.tabs.link
     - content.code.annotation
     - content.code.copy
+  hooks:
+  - hooks/socialmedia.py
   language: pt-BR
   palette:
     - scheme: default
@@ -106,11 +109,11 @@ extra:
       link: https://linktr.ee/wesleyhenriques.oficial
   status:
     <identifier>: <description>
-  extra:
   consent:
     title: Consentimento de Cookies
     description: >- 
       Este site faz uso de coockies para melhor gerenciar sua performance e dados.
+  generator: false
 
 extra_javascript:
   - javascripts/extra.js
